# duckprompt

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: build_sample_db.sql
src/: chat.cpp  duckprompt_extension.cpp  https.cpp  quack_extension.cpp  quacking_duck.cpp
src/include/: chat.hpp  duckprompt_extension.hpp  https.hpp  quack_extension.hpp  quacking_duck.hpp
